# OptiEngine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-PRO  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: rust.yml
src/: README.md  lib.rs  license.rs  main.rs  optimizer.rs
src/core/: gradient.rs  mod.rs  optimizer.rs  optimizer_trait.rs  step_optimizer.rs
src/license/: check.rs
src/pro/: adam.rs  mod.rs  momentum.rs  rmsprop.rs
src/schedulers/: cosine.rs  exponential.rs  mod.rs  scheduler.rs  step_lr.rs
