[package]
name = "optiengine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-performance optimization engine with Rust core and Python bindings"
repository = "https://github.com/programmerH-UX/optiengine"
readme = "README.md"

exclude = [
    "/target",
    "/.venv",
    "/.github",
    "/tests",
    "/examples",
    "/docs",
    "*.log",
    "*.zip",
    "*.tar.gz",
]

include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**",
    "README.md",
    "LICENSE*"
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = []
pro = ["serde"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1", features = ["derive"], default-features = false, optional = true }
sha2 = "0.10"
