[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "opticore"
version = "0.1.0"
description = "High-performance Rust optimizer with Python bindings"
authors = [
    { name="Nwaokoro Magnus Ikechukwu", email="thisismagnus2@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
