[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "Opti-Engine"
version = "0.1.0"
description = "High-performance Rust optimizer with Python bindings"
authors = [
    { name="Nwaokoro Magnus Ikechukwu", email="thisismagnus2@gmail.com" }
]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.8"
